layout_marginTop="20dp"layout_marginTop="20dp"<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Invisible Maze</string>
    <string name="play_button">Play</string>
    <string name="scores_button">High Scores</string>
    <string name="title">Invisible Maze</string>
    <string name="title_activity_gameplay">Home</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="title_activity_search">Home</string>
    <string name="searching">Searching for Players...</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="title_activity_view_scores">Home</string>
    <string name="high_scores">High Scores</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="win">Game over. Score saved.</string>
    <string name="title_activity_lose">LoseActivity</string>
    <string name="lose">Game over. Score saved.</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="turn">Next Turn</string>

</resources>
