<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.cs252.invisiblemaze.GameplayActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    
-->
	
	<TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />
	
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:fitsSystemWindows="true" >
        
	    <LinearLayout
			android:id="@+id/gameboardView" 
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>
		
	    <Button
           	android:id="@+id/up_button"
         	android:layout_centerHorizontal="true"
    		android:layout_below="@id/gameboardView"
          	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:text="@string/up"
           	android:textColor="#FFD700" 
           	android:onClick="move" />
	    
	  	<LinearLayout
			android:id="@+id/left_right_buttons" 
			android:layout_centerHorizontal="true"
			android:layout_below="@id/up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			
	  	   	<Button
           		android:id="@+id/left_button"
          		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:text="@string/left"
           		android:textColor="#FFD700" 
           		android:onClick="move" />
	  	 
	  	   	<Button
           		android:id="@+id/right_button"
          		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:text="@string/right"
           		android:textColor="#FFD700" 
           		android:onClick="move" />
	  	    
		</LinearLayout>
	    
	   	<Button
           	android:id="@+id/down_button"
         	android:layout_centerHorizontal="true"
    		android:layout_below="@id/left_right_buttons"
          	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:text="@string/down"
           	android:textColor="#FFD700" 
           	android:onClick="move" />

      	<LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        </LinearLayout>
        
    </RelativeLayout>

</FrameLayout>
