<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maze"
    tools:context="com.cs252.invisiblemaze.FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <RelativeLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/play_button"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_button"
                android:onClick="startMaze"
                android:textColor="#FFD700" />
            
            <TextView android:id="@+id/title_text"
                android:layout_centerHorizontal="true"
    			android:layout_above="@id/play_button"
              	android:layout_width="wrap_content"
              	android:layout_height="wrap_content"
              	android:text="@string/title"
              	android:gravity="center"
              	android:textColor="#FFD700"
              	android:textSize="32sp"
              	android:textStyle="bold" />
            
            <Button
                android:id="@+id/scores_button"
                android:layout_centerHorizontal="true"
    			android:layout_below="@id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scores_button"
                android:textColor="#FFD700" />
            
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
